Ajustes no cadastro de propriedade simples e correção dos testes.