@@ -21,14 +21,13 @@ import com.querydsl.core.types.Predicate;
 import com.querydsl.core.types.dsl.Expressions;
 import com.querydsl.core.types.dsl.NumberExpression;
 
+import br.edu.ufape.alugafacil.dtos.property.CombinedPropertiesResponse;
 import br.edu.ufape.alugafacil.dtos.property.PropertyFilterRequest;
 import br.edu.ufape.alugafacil.dtos.property.PropertyRequest;
 import br.edu.ufape.alugafacil.dtos.property.PropertyResponse;
-import br.edu.ufape.alugafacil.dtos.property.CombinedPropertiesResponse;
+import br.edu.ufape.alugafacil.dtos.property.PropertyStatusDTO;
 import br.edu.ufape.alugafacil.dtos.simpleProperty.SimplePropertyRequest;
 import br.edu.ufape.alugafacil.dtos.simpleProperty.SimplePropertyResponse;
-
-import br.edu.ufape.alugafacil.dtos.property.PropertyStatusDTO;
 import br.edu.ufape.alugafacil.enums.PaymentStatus;
 import br.edu.ufape.alugafacil.enums.PropertyStatus;
 import br.edu.ufape.alugafacil.enums.UserType; // IMPORTANTE: Adicionado import do UserType
@@ -36,14 +35,14 @@ import br.edu.ufape.alugafacil.mappers.PropertyMapper;
 import br.edu.ufape.alugafacil.mappers.SimplePropertyMapper;
 import br.edu.ufape.alugafacil.models.Plan;
 import br.edu.ufape.alugafacil.models.Property;
-import br.edu.ufape.alugafacil.models.SimpleProperty;
 import br.edu.ufape.alugafacil.models.PropertyView;
 import br.edu.ufape.alugafacil.models.QProperty;
+import br.edu.ufape.alugafacil.models.SimpleProperty;
 import br.edu.ufape.alugafacil.models.User;
 import br.edu.ufape.alugafacil.models.UserSearchPreference;
 import br.edu.ufape.alugafacil.repositories.PropertyRepository;
-import br.edu.ufape.alugafacil.repositories.SimplePropertyRepository;
 import br.edu.ufape.alugafacil.repositories.PropertyViewRepository;
+import br.edu.ufape.alugafacil.repositories.SimplePropertyRepository;
 import br.edu.ufape.alugafacil.repositories.SubscriptionRepository;
 import br.edu.ufape.alugafacil.repositories.UserRepository;
 import br.edu.ufape.alugafacil.repositories.UserSearchPreferenceRepository;
@@ -60,15 +59,15 @@ import lombok.extern.slf4j.Slf4j;
 public class PropertyService implements IPropertyService {
     
     private final PropertyRepository propertyRepository;
-    private final SimplePropertyRepository simplePropertyRepository;
     private final PropertyViewRepository propertyViewRepository;
     private final UserRepository userRepository;
     private final PropertyMapper propertyMapper;
-    private final SimplePropertyMapper simplePropertyMapper;
     private final IFileStorageService fileStorageService;
     private final UserSearchPreferenceRepository preferenceRepository;
     private final INotificationService notificationService;
     private final SubscriptionRepository subscriptionRepository;
+    private final SimplePropertyRepository simplePropertyRepository;
+    private final SimplePropertyMapper simplePropertyMapper;
     
     private Plan getUserActivePlan(User user) {
         return subscriptionRepository.findFirstByUserUserIdAndStatus(user.getUserId(), PaymentStatus.ACTIVE)
@@ -432,18 +431,18 @@ public class PropertyService implements IPropertyService {
                 .collect(Collectors.toList());
     }
 
-	@Override
-	public List<PropertyResponse> getRecentProperties(int limit) {
-		Pageable pageable = PageRequest.of(0, limit);
-		List<Property> properties = propertyRepository.findRecentProperties(PropertyStatus.ACTIVE, pageable);
-		List<UUID> ids = properties.stream().map(Property::getPropertyId).toList();
-		Map<UUID, Long> viewCounts = getViewCountMap(ids);
-		return properties.stream()
-				.map(p -> propertyMapper.toResponse(p, viewCounts.getOrDefault(p.getPropertyId(), 0L)))
-				.collect(Collectors.toList());
-	}
+    @Override
+    public List<PropertyResponse> getRecentProperties(int limit) {
+        Pageable pageable = PageRequest.of(0, limit);
+        List<Property> properties = propertyRepository.findRecentProperties(PropertyStatus.ACTIVE, pageable);
+        List<UUID> ids = properties.stream().map(Property::getPropertyId).toList();
+        Map<UUID, Long> viewCounts = getViewCountMap(ids);
+        return properties.stream()
+                .map(p -> propertyMapper.toResponse(p, viewCounts.getOrDefault(p.getPropertyId(), 0L)))
+                .collect(Collectors.toList());
+    }
 
-	@Override
+    @Override
 	public List<SimplePropertyResponse> getAllSimpleProperties() {
 		List<SimpleProperty> simpleProperties = simplePropertyRepository.findAll();
 		return simpleProperties.stream()
@@ -451,7 +450,8 @@ public class PropertyService implements IPropertyService {
 				.collect(Collectors.toList());
 	}
 
-	@Override
+
+    @Override
 	public CombinedPropertiesResponse getAllPropertiesWithSimple(PropertyFilterRequest filters, Pageable pageable) {
 		Page<PropertyResponse> properties = getAllProperties(filters, pageable);
 		List<SimplePropertyResponse> simpleProperties = getAllSimpleProperties();
@@ -502,15 +502,4 @@ public class PropertyService implements IPropertyService {
 				.orElseThrow(() -> new RuntimeException("Propriedade Simples não encontrada"));
 		return simplePropertyMapper.toResponse(simpleProperty);
 	}
-
-    @Override
-    public List<PropertyResponse> getRecentProperties(int limit) {
-        Pageable pageable = PageRequest.of(0, limit);
-        List<Property> properties = propertyRepository.findRecentProperties(PropertyStatus.ACTIVE, pageable);
-        List<UUID> ids = properties.stream().map(Property::getPropertyId).toList();
-        Map<UUID, Long> viewCounts = getViewCountMap(ids);
-        return properties.stream()
-                .map(p -> propertyMapper.toResponse(p, viewCounts.getOrDefault(p.getPropertyId(), 0L)))
-                .collect(Collectors.toList());
-    }
 }
